style: fix hero-image overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,13 @@
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 button, input, select, textarea {
@@ -28,6 +34,7 @@ body {
   width: 100%;
   height: 100%;
   display: block;
+  overflow-x: hidden;
 
   /* COLOR THEME */
   color-scheme: light dark;
